@@ -1,3 +1,9 @@
+* master *
+
+* Appveyor tests only 2012, 2014 with one Ruby, 23-x64.
+* CircleCI tests 2016.
+
+
 * 1.0.5 *
 
 * Windows Static Builds - Use FreeTDS 1.00.15, OpenSSL 1.0.2j.
